ARTEMIS-2109: Updating the build to be able to execute it on Java 11 and Java 8.