@@ -71,6 +71,8 @@
    </prerequisites>
 
    <properties>
+      <modular.jdk.surefire.arg></modular.jdk.surefire.arg>
+      <javac.version>9+181-r4173-1</javac.version>
        <!-- base url for site deployment.  See distribution management for full url.  Override this in settings.xml for staging -->
       <staging.siteURL>scp://people.apache.org/x1/www/activemq.apache.org</staging.siteURL>
 
@@ -127,7 +129,7 @@
       <hamcrest.version>2.1</hamcrest.version>
 
       <!-- used on tests -->
-      <groovy.version>2.4.3</groovy.version>
+      <groovy.version>2.5.10</groovy.version>
 
       <owasp.version>1.4.3</owasp.version>
       <spring.version>5.1.7.RELEASE</spring.version>
@@ -158,9 +160,6 @@
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-      <maven.compiler.source>1.8</maven.compiler.source>
-      <maven.compiler.target>1.8</maven.compiler.target>
-
      <!--
 
        note for idea users:
@@ -185,8 +184,6 @@
       <skipLicenseCheck>true</skipLicenseCheck>
       <skipStyleCheck>true</skipStyleCheck>
       <skipOWASP>true</skipOWASP>
-
-      <javac-compiler-id>javac-with-errorprone</javac-compiler-id>
 
       <directory-version>2.0.0-M15</directory-version>
       <directory-jdbm2-version>2.0.0-M1</directory-jdbm2-version>
@@ -334,6 +331,13 @@
             <scope>provided</scope>
             <optional>true</optional>
             <!-- License: Apache 2.0-->
+         </dependency>
+         <dependency>
+             <groupId>com.google.errorprone</groupId>
+             <artifactId>error_prone_core</artifactId>
+             <version>2.4.0</version>
+             <scope>provided</scope>
+            <optional>true</optional>
          </dependency>
          <!--needed to compile the logging jar-->
          <dependency>
@@ -888,9 +892,7 @@
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-compiler-plugin</artifactId>
-                  <!-- version 3.2 is having problems with the APT processor resulting in
-                    java.lang.IllegalStateException: endPosTable already set  -->
-                  <version>3.1</version>
+                  <version>3.8.1</version>
                   <configuration combine.self="override" />
                </plugin>
                <plugin>
@@ -910,6 +912,10 @@
          <activation>
             <jdk>1.8</jdk>
          </activation>
+          <properties>
+              <maven.compiler.source>8</maven.compiler.source>
+              <maven.compiler.target>8</maven.compiler.target>
+          </properties>
          <build>
             <plugins>
                <plugin>
@@ -921,6 +927,34 @@
                </plugin>
             </plugins>
          </build>
+      </profile>
+      <profile>
+          <id>java9on</id>
+          <activation>
+              <jdk>[9,)</jdk>
+          </activation>
+          <properties>
+              <maven.compiler.source>8</maven.compiler.source>
+              <maven.compiler.target>11</maven.compiler.target>
+              <modular.jdk.surefire.arg>--add-modules java.sql,jdk.unsupported </modular.jdk.surefire.arg>
+          </properties>
+          <build>
+              <plugins>
+                  <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-compiler-plugin</artifactId>
+                      <configuration>
+                          <showWarnings>true</showWarnings>
+                          <compilerArgs>
+                              <arg>-Xdiags:verbose</arg>
+                              <arg>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</arg>
+                              <arg>-XDcompilePolicy=simple</arg>
+                              <arg>-Xplugin:ErrorProne -Xep:MissingOverride:ERROR -Xep:NonAtomicVolatileUpdate:ERROR -Xep:SynchronizeOnNonFinalField:ERROR  -Xep:SynchronizeOnNonFinalField:ERROR -Xep:WaitNotInLoop:ERROR -XepExcludedPaths:.*/generated-sources/.*</arg>
+                          </compilerArgs>
+                      </configuration>
+                  </plugin>
+              </plugins>
+          </build>
       </profile>
       <profile>
          <id>owasp</id>
@@ -1396,34 +1430,15 @@
                <artifactId>maven-compiler-plugin</artifactId>
                <!-- version 3.2 is having problems with the APT processor resulting in
                     java.lang.IllegalStateException: endPosTable already set  -->
-               <version>3.1</version>
+               <version>3.8.1</version>
                <!-- Enable Google's Error-Prone https://github.com/google/error-prone -->
                <configuration>
-                 <showWarnings>true</showWarnings>
-                 <forceJavacCompilerUse>true</forceJavacCompilerUse>
-                 <compilerId>${javac-compiler-id}</compilerId>
-                 <compilerArgs>
-                    <arg>-Xep:MissingOverride:ERROR</arg>
-                    <arg>-Xep:NonAtomicVolatileUpdate:ERROR</arg>
-                    <arg>-Xep:SynchronizeOnNonFinalField:ERROR</arg>
-                    <arg>-Xep:StaticAccessedFromInstance:ERROR</arg>
-                    <arg>-Xep:SynchronizeOnNonFinalField:ERROR</arg>
-                    <arg>-Xep:WaitNotInLoop:ERROR</arg>
-                    <arg>-Xdiags:verbose</arg>
-                 </compilerArgs>
+                   <showWarnings>true</showWarnings>
+                   <compilerArgs combine.children="append">
+                       <arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar -Xep:MissingOverride:ERROR -Xep:NonAtomicVolatileUpdate:ERROR -Xep:SynchronizeOnNonFinalField:ERROR -Xep:StaticAccessedFromInstance:ERROR -Xep:SynchronizeOnNonFinalField:ERROR -Xep:WaitNotInLoop:ERROR</arg>
+                       <arg>-Xdiags:verbose</arg>
+                   </compilerArgs>
                </configuration>
-               <dependencies>
-                 <dependency>
-                   <groupId>org.codehaus.plexus</groupId>
-                   <artifactId>plexus-compiler-javac-errorprone</artifactId>
-                   <version>2.8</version>
-                 </dependency>
-                 <dependency>
-                   <groupId>com.google.errorprone</groupId>
-                   <artifactId>error_prone_core</artifactId>
-                   <version>2.0.9</version>
-                 </dependency>
-               </dependencies>
             </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
@@ -1433,8 +1448,7 @@
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
-
-               <version>2.9</version>
+               <version>2.10.4</version>
             </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
@@ -1605,7 +1619,7 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>3.0.0</version>
+            <version>3.1.1</version>
             <dependencies>
                <dependency>
                   <groupId>com.github.sevntu-checkstyle</groupId>
@@ -1729,7 +1743,7 @@
          <plugin>
             <groupId>org.apache.felix</groupId>
             <artifactId>maven-bundle-plugin</artifactId>
-            <version>3.0.0</version>
+            <version>4.2.1</version>
             <extensions>true</extensions>
          </plugin>
          <plugin>
@@ -1822,7 +1836,7 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.9</version>
+            <version>2.10.4</version>
             <configuration>
                <minmemory>128m</minmemory>
                <maxmemory>1024m</maxmemory>
